Added filters for course type, certificates, source; started refactoring to ajax request

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>{% block title %}Emily's Online Courses{% endblock %}</title>
-	<link rel="stylesheet" href="/static/css/styles.css">
-	<script src="http://code.jquery.com/jquery.js"></script>
+	<!-- <link rel="stylesheet" href="/static/css/styles.css"> -->
+	<script src="https://code.jquery.com/jquery.js"></script>
 </head>
 <body>
 	{% block content %}CONTENT GOES HERE{% endblock %}
