--- a/templates/search.html
+++ b/templates/search.html
@@ -5,7 +5,7 @@
 	Sorry, we couldn't find any courses that matched your description! <a href="/">Try another search.</a>
 	{% else %}
 	Refine your search:
-	<form action='/search/filters'>
+	<form action='/search/filters/fake'>
 		Max Price: <input type="number" name="price" id="price-field"></input><br>
 		<label id="language-field">Language: 
 		<input type="checkbox" name="languages" value="en" >English</input>
@@ -36,25 +36,21 @@
 		<input type="checkbox" name="university" value="Yale">Yale University</input><br>
 		<input type="submit" id="filters" value="Apply Filters" ></input>
 	</form>
-	<div id="search-results">
-		<li id="course-title"></li>
-		<li id="course-info"></li>
-	</div>
-	<div>Here are your search results:
+	<div id="search-results">Here are your search results:
 	{% for course in courses %}
 	<ul>
-		<img id="course-pic" src="{{ course.picture }}" height="75" width="100">
-		<li id="course-titleFAKE">{{ course.title }}</li>
-		<li id="course-infoFAKE">{{ course.description }}</li>
+		<img src="{{ course.picture }}" height="75" width="100">
+		<li>{{ course.title }}</li>
+		<li>{{ course.description }}</li>
 		{% if course.workload %}
-		<li id="course-work">{{ course.workload }}</li>
+		<li>{{ course.workload }}</li>
 		{% endif %}
 		{% if course.price != 0 %}
-		<li id="course-price">${{ course.price }}</li>
+		<li>${{ course.price }}</li>
 		{% else %}
 		<li>Free</li>
 		{% endif %}
-		<li id="course-url"><a href="{{ course.url }}">Go to this course</a></li>
+		<li><a href="{{ course.url }}">Go to this course</a></li>
 	</ul>
 	{% endfor %}
 	{% endif %}
@@ -65,20 +61,15 @@
 
 		$("#filters").on('click', function(evt) { 
 			evt.preventDefault(); 
-			console.log('hi');
 			var formInputs = {
 				price: $("#price-field").val(),
 				// languages: $("#chinese").val(),
 			};
 			console.log(formInputs);
 			$.get("/search/filters.json", formInputs, function (course_dict) {
-				console.log(course_dict);
-				for (var i=0; i < course_dict.length; i++) {
-					console.log(i);
-					console.log(i['title']);
-					console.log(i['description']);
-					$("#course-title").html(i['title']);
-					$("#course-info").html(i['description']);
+				$("#search-results").empty();
+				for (var k in course_dict) {
+					$("#search-results").append("<ul><img src=" + course_dict[k]['picture'] + " height=\"75\" width=\"100\"><li>" + course_dict[k]['title'] + "</li><li>" + course_dict[k]['description'] + "</li><li>" + course_dict[k]['workload'] + "</li><li>" + course_dict[k]['price'] + "</li><li><a href=" + course_dict[k]['url'] + ">Go to this course</a></li></ul>");
 				};
 			});
 		});
