--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>{% block title %}Emily's Online Courses{% endblock %}</title>
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 	<!-- <link rel="stylesheet" href="/static/css/styles.css"> -->
 	<script src="https://code.jquery.com/jquery.js"></script>
 </head>
