--- a/templates/base.html
+++ b/templates/base.html
@@ -2,16 +2,12 @@
 <html>
 <head>
 	<title>{% block title %}Emily's Online Courses{% endblock %}</title>
-	<!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"> -->
-	<!-- <link rel="stylesheet" href="/static/css/styles.css"> -->
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="/static/styles.css">
 	<script src="https://code.jquery.com/jquery.js"></script>
-	{% with messages = get_flashed_messages() %}
-		{% if messages %}
-			{% for message in messages %}
-				{{ message }}
-			{% endfor %}
-		{% endif %}
-	{% endwith %}
+
+	<!-- <h3><a href="/" id="home-button">Emily's Online Classes</a></h3>
 	{% if not session['current_user'] %}
 	<form action="/register">
 		<input type="submit" value="Sign Up">
@@ -27,9 +23,36 @@
 	<form action="/logout">
 		<input type="submit" value="Log Out">
 	</form>
-	{% endif %}
+	{% endif %} -->
 </head>
 <body>
+	<nav class="navbar navbar-default navbar-fixed-top">
+  	<div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="/">Emily's Online Classes</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="/">Home</a></li>
+  	</ul>
+  	<ul class="nav navbar-nav navbar-right">
+      {% if not session['current_user'] %}
+      <li><a href="/register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+      <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Log In</a></li> 
+      {% endif %}
+      {% if session['current_user'] %}
+      <li><a href="/profile"><span class="glyphicon glyphicon-user"></span> My Profile</a></li>
+      <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Log Out</a></li>
+      {% endif %}
+    </ul>
+  </div>
+  </nav><br>
+  {% with messages = get_flashed_messages() %}
+		{% if messages %}
+			{% for message in messages %}
+				{{ message }}<br>
+			{% endfor %}
+		{% endif %}
+	{% endwith %}
 	{% block content %}CONTENT GOES HERE{% endblock %}
 </body>
 </html>
